@@ -27,7 +27,7 @@
 
 #ifndef lint
 static  char sccsid[] = "@(#)s_err.c	1.11 5/17/93 (C) 1992 Darren Reed";
-static char *rcs_version = "$Id: s_err.c,v 1.15 1999/03/15 20:58:29 db Exp $";
+static char *rcs_version = "$Id: s_err.c,v 1.16 1999/05/05 03:11:25 db Exp $";
 #endif
 
 static	char	numbuff[512];
@@ -279,7 +279,7 @@ static	char *	replies[] = {
 /* 240 */	(char *)NULL,
 /* 241 RPL_STATSLLINE, */	":%s 241 %s %c %s * %s %d %d",
 /* 242 RPL_STATSUPTIME,*/	":%s 242 %s :Server Up %d days, %d:%02d:%02d",
-/* 243 RPL_STATSOLINE, */	":%s 243 %s %c %s * %s %s %d",
+/* 243 RPL_STATSOLINE, */	":%s 243 %s %c %s * %s %s %d %s",
 /* 244 RPL_STATSHLINE, */	":%s 244 %s %c %s * %s %d %d", 
 /* 245 RPL_STATSSLINE, */	":%s 245 %s %c %s * %s %d %d", 
 /* 246 */	(char *)NULL,
